# Bank-Term-Deposit-prediction

./: .gitignore  README.md  pyproject.toml
subscription_forecast/: main.py
subscription_forecast/application/: data_profiling.py  eda.ipynb  final_model_prediction.py  hyperparmaters_optimisation.py  main.py  model.py  model_evaluation.py  train_model.py
subscription_forecast/application/.ipynb_checkpoints/: eda-checkpoint.ipynb
subscription_forecast/config/: config.py  config.yml  config_template.yml
subscription_forecast/domain/: feature_engineering.py  model.py  model_evaluation.py  model_optimisation.py  plot_test.py
subscription_forecast/infrastructure/: load_data.py  preprocessing.py
subscription_forecast/interface/: Explainability.ipynb  Model_optimisation.ipynb  Untitled.ipynb  eda.ipynb  explain_utilities.py
subscription_forecast/interface/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
