[tool.poetry]
name = "subscription_forecast"
version = "0.1.0"
description = ""
authors = ["cyrlemaire <72152608+cyrlemaire@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.2.2"
numpy = "^1.20.1"
seaborn = "^0.11.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
